deploy/tools/device-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-simulator
  labels:
    app: device-simulator
spec:
  selector:
    matchLabels:
      app: device-simulator
  template:
    metadata:
      labels:
        app: device-simulator
    spec:
      containers:
        - name: device-simulator
          image: gcr.io/iot-garage-242501/device-simulator:4433dcdbb5da57160be1c8f2b0a63f7f49f68574
          imagePullPolicy: Always
          resources:
            limits:
              memory: "100M"
              cpu: "100m"
            requests:
              memory: "25M"
              cpu: "25m"
          command: ["python"]
          args:
            [
              "simulate.py",
              "--env",
              "production",
              "--imap-server",
              "imap.gmail.com",
            ]
