deploy/tools/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: armore-tools-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - metabase.internal.armore.dev
      secretName: letsencrypt-tools
  rules:
    - host: metabase.internal.armore.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: metabase-internal-service
              servicePort: 3000
